--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -260,7 +260,7 @@
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  align-items: center;
+  align-items: flex-start;
 }
 .cards__item {
   box-sizing: border-box;
